--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/lulu-cao/zhanshu_electronics#readme",
   "dependencies": {
     "fs": "0.0.1-security",
-    "inquirer": "^8.2.0"
+    "inquirer": "^8.2.0",
+    "mysql": "^2.18.1"
   }
 }
